# image-converter-tauri

./: README.md  package-lock.json  package.json
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/utils/: ImagesHandler.ts
